# family-tree-app

./: .env.example  .gitignore  Makefile  README.md  compose.yml
ai/plans/: 2026-03-21-family-tree-app-implementation-plan.md
ai/progress/: family-tree-progress.md
ai/specs/: 2026-03-20-family-tree-app-design.md
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 20260321_0001_initial_schema.py  20260321_0002_review_schema_constraints.py
api/app/: main.py
api/app/api/: deps.py  router.py
api/app/api/routes/: auth.py  people.py  relationships.py  tree.py
api/app/core/: config.py  security.py
api/app/db/: session.py
api/app/models/: __init__.py  auth_session.py  person.py  relationship.py  user.py
api/app/schemas/: auth.py  person.py  relationship.py  tree.py
api/app/services/: auth_service.py  person_service.py  relationship_service.py  tree_service.py
api/scripts/: create_user.py  seed_demo_data.py  seed_owner.py
api/tests/: conftest.py  test_health.py
api/tests/auth/: test_login.py
api/tests/db/: test_schema_constraints.py
api/tests/people/: test_people_api.py
api/tests/relationships/: test_relationship_rules.py
api/tests/tree/: test_tree_api.py
scripts/: smoke.sh
web/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
web/e2e/: login.spec.ts  moderator.spec.ts  tree-viewer.spec.ts
web/src/: router.ts
web/src/app/: session.test.ts  session.ts
web/src/lib/: fetchJson.ts
web/src/styles/: index.css
web/src/test/: renderApp.ts  (+1 more)
(+18 files in other folders)
