[project]
name = "family-tree-app-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pwdlib[argon2]",
    "psycopg[binary]",
    "pytest",
    "pytest-cov",
    "SQLAlchemy>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
